--- a/qcr.html
+++ b/qcr.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="//static.runoob.com/assets/qrcode/qrcode.min.js"></script>
 </head>
 <body>
-<div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div>
+<div id="qrcode" style="width:100%; height:100%;"></div>
 <script type="text/javascript">
             function parse_query_string(query) {
                 var vars = query.split("&");
@@ -32,8 +32,8 @@
             var qs = parse_query_string(query);
 var qrcurl = qs.url;
 var qrcode = new QRCode(document.getElementById("qrcode"), {
-	width : 100,
-	height : 100
+	width : 512,
+	height : 512
 });
 
 function makeCode () {		
